Fix overlap footer of features section & slides not showing

--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -1,8 +1,17 @@
+body {
+    /* Prevent horizontal scrolling */
+    overflow-x: hidden; 
+    /* Ensure vertical scrolling is possible */
+    overflow-y: auto; 
+    margin: 0;
+    padding: 0;
+}
+
 /* Full-screen slideshow container */
 .slideshow-container {
     position: relative;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
 }
 
@@ -28,16 +37,16 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.8);
     z-index: -1;
 }
 
 /* Slide animation */
 @keyframes slideshow {
-    0% {background-image: url("{% static 'images/caravan-1.jpg' %}");}
-    33% {background-image: url("{% static 'images/caravan-2.jpg' %}");}
-    66% {background-image: url("{% static 'images/caravan-3.jpg' %}");}
-    100% {background-image: url("{% static 'images/caravan-4.jpg' %}");}
+    0% {background-image: url("../images/caravan-1.jpg");}
+    33% {background-image: url("../images/caravan-2.jpg");}
+    66% {background-image: url("../images/caravan-3.jpg");}
+    100% {background-image: url("../images/caravan-4.jpg");}
 }
 
 /* Ensures content is visible and centered */
@@ -46,6 +55,26 @@
     z-index: 1;
 }
 
+.card {
+    margin-bottom: 30px;
+}
+
 .text-white {
     color: #fff;
+}
+
+.about {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+footer {
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    text-align: center;
 }
